--- a/provider_config.yml
+++ b/provider_config.yml
@@ -15,9 +15,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/mybatis_ssm?useUnicode=true&characterEncoding=utf8
-    username: mybatis_ssm
-    password: xiaoli
+    url: jdbc:mysql://localhost:3306/mysql?useUnicode=true&characterEncoding=utf8
+    username: root
+    password: 123
   jpa:
     hibernate:
       ddl-auto: update
@@ -34,11 +34,11 @@ eureka:
       defaultZone: http://localhost:2004/eureka
 
 info:
-  groupId: com.javaxl.testSpringcloud
+  groupId: com.xzy.springcloud
   artifactId: microservice-student-provider-config-1007
   version: 1.0-SNAPSHOT
-  userName: http://javaxl.com
-  phone: 123456
+  userName: http://xzy.com
+  phone: 7758258
 ---
 server:
   port: 1008
@@ -52,9 +52,9 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/mybatis_ssm?useUnicode=true&characterEncoding=utf8
-    username: mybatis_ssm
-    password: xiaoli
+    url: jdbc:mysql://localhost:3306/mysql?useUnicode=true&characterEncoding=utf8
+    username: root
+    password: 123
   jpa:
     hibernate:
       ddl-auto: update
@@ -71,8 +71,8 @@ eureka:
       defaultZone: http://localhost:2004/eureka
 
 info:
-  groupId: com.javaxl.testSpringcloud
+  groupId: com.xzy.springcloud
   artifactId: microservice-student-provider-config-1008
   version: 1.0-SNAPSHOT
-  userName: http://javaxl.com
-  phone: 123456
+  userName: http://xzy.com
+  phone: 7758258
